--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2.1.4
         with:
-          python-version: 3.6
+          python-version: 3.6.8
 
       - name: Install test dependencies
-        run:
+        run: |
           python -m pip install --upgrade pip
           pip install pipenv
           python -m pipenv install --dev --system
