--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,10 @@ jobs:
           pip install pipenv
           python -m pipenv install --dev --system
 
+      - name: Check format
+        run:
+          make check-format
+
       - name: ansible-test sanity
         run:
           make sanity
