chore: Use isort

--- a/Pipfile
+++ b/Pipfile
@@ -13,12 +13,13 @@ black = "*"
 ansible = "*"
 pytest = "*"
 isort = "*"
-coverage = "*"
+coverage = "==4.5.4"
 flake8 = "*"
 pytest-xdist = "*"
 pytest-mock = "*"
 pylint = "*"
 voluptuous = "*"
+importlib-metadata = "*"
 
 [requires]
 python_version = "3.6"
