pin isort version

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ jmespath = "==0.9.4"
 black = "*"
 ansible = "*"
 pytest = "*"
-isort = "*"
+isort = "==5.6.4"
 coverage = "==4.5.4"
 flake8 = "*"
 pytest-xdist = "*"
