--- a/Pipfile
+++ b/Pipfile
@@ -9,15 +9,15 @@ requests = "==2.22.0"
 jmespath = "==0.9.4"
 
 [dev-packages]
-black = "*"
+black = "==20.8b1"
 ansible = "*"
 pytest = "*"
-isort = "*"
+isort = "==5.6.4"
 coverage = "==4.5.4"
-flake8 = "*"
+flake8 = "==3.8.4"
 pytest-xdist = "*"
 pytest-mock = "*"
-pylint = "*"
+pylint = "==2.6.0"
 voluptuous = "*"
 importlib-metadata = "==1.7.0"
 dataclasses = "*"
