--- a/tests/integration/firewall/test_panos_config_element.yml
+++ b/tests/integration/firewall/test_panos_config_element.yml
@@ -1,7 +1,7 @@
 ---
 - import_tasks: 'reset.yml'
 
-- name: test_panos_config_element - Create
+- name: test_panos_config_element - Simple Create
   vars:
     banner_text: new banner
   panos_config_element:
@@ -9,13 +9,13 @@
     element: '<login-banner>{{ banner_text }}</login-banner>'
   register: result
 
-- name: test_panos_config_element - Assert create was successful
+- name: test_panos_config_element - Assert Simple Create was successful
   assert:
     that:
       - result is success
       - result is changed
 
-- name: test_panos_config_element - - Create (idempotence)
+- name: test_panos_config_element - Simple Create (idempotence)
   vars:
     banner_text: new banner
   panos_config_element:
@@ -23,7 +23,7 @@
     element: '<login-banner>{{ banner_text }}</login-banner>'
   register: result
 
-- name: test_panos_config_element - Assert create (idempotence) was successful
+- name: test_panos_config_element - Assert Simple Create (idempotence) was successful
   assert:
     that:
       - result is success
@@ -42,3 +42,63 @@
     that:
       - result is success
       - result is changed
+
+- name: test_panos_config_element - List Entry Create
+  panos_config_element:
+    xpath: "/config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address"
+    element: |
+      <entry name="Test-One">
+        <ip-netmask>1.1.1.1</ip-netmask>
+      </entry>
+  register: result
+
+- name: test_panos_config_element - Assert List Entry Create was successful
+  assert:
+    that:
+      - result is success
+      - result is changed
+
+- name: test_panos_config_element - List Entry Create (idempotence)
+  panos_config_element:
+    xpath: "/config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address"
+    element: |
+      <entry name="Test-One">
+        <ip-netmask>1.1.1.1</ip-netmask>
+      </entry>
+  register: result
+
+- name: test_panos_config_element - Assert List Entry Create was successful (idempotence)
+  assert:
+    that:
+      - result is success
+      - result is not changed
+
+- name: test_panos_config_element - List Entry Additional Create
+  panos_config_element:
+    xpath: "/config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address"
+    element: |
+      <entry name="Test-Two">
+        <ip-netmask>1.1.1.2</ip-netmask>
+      </entry>
+  register: result
+
+- name: test_panos_config_element - Assert List Entry Additional Create was successful
+  assert:
+    that:
+      - result is success
+      - result is changed
+
+- name: test_panos_config_element - List Entry Additional Create  (idempotence)
+  panos_config_element:
+    xpath: "/config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address"
+    element: |
+      <entry name="Test-Two">
+        <ip-netmask>1.1.1.2</ip-netmask>
+      </entry>
+  register: result
+
+- name: test_panos_config_element - Assert List Entry Additional Create was successful (idempotence)
+  assert:
+    that:
+      - result is success
+      - result is not changed
