--- a/tests/integration/firewall/test_panos_config_element.yml
+++ b/tests/integration/firewall/test_panos_config_element.yml
@@ -115,6 +115,18 @@
       - result is success
       - result is not changed
 
+- name: test_panos_config_element - List Delete
+  panos_config_element:
+    xpath: "/config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address/entry[@name='Test-Two']"
+    state: absent
+  register: result
+
+- name: test_panos_config_element - Assert delete was successful
+  assert:
+    that:
+      - result is success
+      - result is changed
+
 - name: test_panos_config_element - Complex object entry
   vars:
     DNS_1: 1.1.1.1
@@ -187,13 +199,6 @@
   register: result
 
 - name: test_panos_config_element - Assert Complex object entry Create was successful
-- name: test_panos_config_element - List Delete
-  panos_config_element:
-    xpath: "/config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address/entry[@name='Test-Two']"
-    state: absent
-  register: result
-
-- name: test_panos_config_element - Assert delete was successful
   assert:
     that:
       - result is success
