--- a/tests/integration/firewall/test_panos_dynamic_updates.yml
+++ b/tests/integration/firewall/test_panos_dynamic_updates.yml
@@ -4,6 +4,7 @@
 - name: test_panos_dynamic_updates - Install Latest Content
   panos_dynamic_updates:
     content_type: content
+  timeout: 180
   register: result
 
 - name: test_panos_dynamic_updates - Assert Latest Content is not Failed
@@ -14,6 +15,7 @@
 - name: test_panos_dynamic_updates - Install Latest Content - (idempotence)
   panos_dynamic_updates:
     content_type: content
+  timeout: 180
   register: result
 
 - name: test_panos_dynamic_updates - Assert Install Latest Content (idempotence) was successful
