--- a/Pipfile
+++ b/Pipfile
@@ -8,18 +8,19 @@ xmltodict = "==0.12.0"
 requests = "==2.22.0"
 
 [dev-packages]
-black = "==20.8b1"
+black = "*"
 ansible = "*"
 pytest = "*"
-isort = "==5.7.0"
+isort = "*"
 coverage = "==4.5.4"
-flake8 = "==3.8.4"
+flake8 = "*"
 pytest-xdist = "*"
 pytest-mock = "*"
-pylint = "==2.6.0"
+pylint = "*"
 voluptuous = "*"
-importlib-metadata = "==3.4.0"
+importlib-metadata = "*"
 dataclasses = "*"
+yamllint = "*"
 
 [requires]
 python_version = "3.6"
