chore: Rename collection

--- a/tests/integration/run_single_test.yml
+++ b/tests/integration/run_single_test.yml
@@ -6,7 +6,7 @@
     blank_config: blank.xml
 
   collections:
-    - mrichardson03.panos
+    - paloaltonetworks.panos_enhanced
 
   tasks:
     - name: Run test
