--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,10 +2,10 @@
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric lowercase characters and underscores. Namespaces cannot start with
 # underscores or numbers and cannot contain consecutive underscores
-namespace: mrichardson03
+namespace: paloaltonetworks
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: panos
+name: panos_enhanced
 
 # The version of the collection. Must be compatible with semantic versioning
 version: 1.0.0
@@ -21,7 +21,7 @@ authors:
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
-description: 'Collection for Palo Alto Networks PAN-OS devices'
+description: 'Enhanced Ansible collection for PAN-OS devices'
 
 # The path to the license file for the collection. This path is relative to the root of the collection. This key is
 # mutually exclusive with 'license'
@@ -43,16 +43,16 @@ tags:
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: https://github.com/mrichardson03/mrichardson03.panos
+repository: https://github.com/PaloAltoNetworks/panos_enhanced
 
 # The URL to any online docs
-documentation: https://github.com/mrichardson03/mrichardson03.panos
+documentation: https://github.com/PaloAltoNetworks/panos_enhanced
 
 # The URL to the homepage of the collection/project
-homepage: https://github.com/mrichardson03/mrichardson03.panos
+homepage: https://github.com/PaloAltoNetworks/panos_enhanced
 
 # The URL to the collection issue tracker
-issues: https://github.com/mrichardson03/mrichardson03.panos/issues
+issues: https://github.com/PaloAltoNetworks/panos_enhanced/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
