--- a/tests/integration/inventory.example
+++ b/tests/integration/inventory.example
@@ -5,7 +5,7 @@ panos-10        ansible_host=192.168.55.10
 ansible_user=admin
 ansible_password=P4loalto!
 
-ansible_network_os=paloaltonetworks.panos_enhanced.panos
+ansible_network_os=mrichardson03.panos.panos
 ansible_connection=httpapi
 ansible_httpapi_port=443
 ansible_httpapi_use_ssl=True
