--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
   push:
     branches:
-      - master
+      - main
       - develop
   pull_request:
 
@@ -43,6 +43,10 @@ jobs:
         run:
           make units
 
+      - name: ansible-galaxy collection build
+        run:
+          make build
+
   automerge:
     name: Auto-merge
     needs: test
@@ -54,3 +58,40 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_LOGIN: dependabot[bot]
           PRESET: DEPENDABOT_PATCH
+
+  release:
+    name: release
+    if: github.event_name == 'push' && github.ref != 'refs/heads/develop'
+    needs: [sanity]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Galaxy auth
+        run: |
+          mkdir -p ~/.ansible
+          echo "token: $GALAXY_API_KEY" > ~/.ansible/galaxy_token
+        env:
+          GALAXY_API_KEY: ${{ secrets.GALAXY_API_KEY }}
+        shell: bash
+
+      - name: Create release and publish
+        id: release
+        uses: cycjimmy/semantic-release-action@v2
+        with:
+          semantic_version: 17.1.1
+          extra_plugins: |
+            conventional-changelog-conventionalcommits@^4.4.0
+            @semantic-release/git@^9.0.0
+            @semantic-release/exec@^5.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Store built collection
+        uses: actions/upload-artifact@v2
+        with:
+          name: collection
+          path: |
+            *.tar.gz
