--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,10 +2,10 @@
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric lowercase characters and underscores. Namespaces cannot start with
 # underscores or numbers and cannot contain consecutive underscores
-namespace: paloaltonetworks
+namespace: mrichardson03
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: panos_enhanced
+name: panos
 
 # The version of the collection. Must be compatible with semantic versioning
 version: 1.0.0
@@ -21,7 +21,7 @@ authors:
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
-description: 'Enhanced Ansible collection for PAN-OS devices'
+description: 'Ansible collection for PAN-OS devices'
 
 # The path to the license file for the collection. This path is relative to the root of the collection. This key is
 # mutually exclusive with 'license'
@@ -58,4 +58,4 @@ issues: https://github.com/mrichardson03/mrichardson03.panos/issues
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
 # uses 'fnmatch' to match the files or directories. Some directories and files like 'galaxy.yml', '*.pyc', '*.retry',
 # and '.git' are always filtered
-build_ignore: ['venv*', '.pytest_cache', '.git']
+build_ignore: ['.venv*', '.pytest_cache', '.git']
