--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,13 @@ jobs:
         with:
           python-version: 3.6.8
 
-      - name: Install test dependencies
+      - name: Install pipenv
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
 
-      - id: cache-pipenv
+      - name: Check pipenv cache
+        id: cache-pipenv
         uses: actions/cache@v2
         with:
           path: ~/.local/share/virtualenvs
@@ -38,7 +39,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pipenv-
 
-      - name: Install dependencies
+      - name: Install dependencies (if no cache hit)
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install --dev
