--- a/tests/integration/reset.yml
+++ b/tests/integration/reset.yml
@@ -4,6 +4,5 @@
     cmd: '<load><config><from>blank.xml</from></config></load>'
     cmd_is_xml: True
 
-# - name: Commit
-#   panos_commit:
-#     provider: '{{ device }}'
+- name: Commit
+  panos_commit:
