fix(panos_check): Bad auth causes immediate error
* Add validation to keygen API call

--- a/tests/integration/firewall/test_panos_check.yml
+++ b/tests/integration/firewall/test_panos_check.yml
@@ -3,6 +3,8 @@
 
 - name: test_panos_check - Check ready
   panos_check:
+    sleep: 30
+    timeout: 12000
   register: result
 
 - name: test_panos_check - Assert Success
