--- a/roles/ironskillet/tasks/main.yml
+++ b/roles/ironskillet/tasks/main.yml
@@ -2,7 +2,8 @@
 - name: Retrieve PAN-OS version
   panos_facts:
 
-- set_fact:
+- name: Set panos_release fact
+  set_fact:
     panos_release: "panos-{{ ansible_net_version.split('.')[0:2] | join('.') }}"
 
 - include_tasks: "{{ panos_release }}.yml"
