--- a/roles/onboard/handlers/main.yml
+++ b/roles/onboard/handlers/main.yml
@@ -1,2 +1,12 @@
 ---
-# handlers file for onboard
+- name: Commit configuration
+  panos_commit:
+
+- name: Device rebooted
+  block:
+  - name: Wait for reboot
+    wait_for:
+      timeout: 30
+
+  - name: Wait until ready
+    panos_check:
