ci: Add ansible-lint to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,10 @@ jobs:
         run:
           pipenv run make units
 
+      - name: ansible-lint roles
+        run:
+          pipenv run make ansible-lint
+
       - name: ansible-galaxy collection build
         run:
           pipenv run make build
