--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,6 @@ jobs:
       run:
         working-directory: ./ansible_collections/mrichardson03/panos
 
-    env:
-      PIPENV_VENV_IN_PROJECT: 1
-
     steps:
       - uses: actions/checkout@v2
         with:
@@ -27,19 +24,18 @@ jobs:
 
       - name: Install pipenv
         run: |
-          python -m pip install --upgrade pip
           pip install pipenv
 
       - name: Check pipenv cache
         id: cache-pipenv
         uses: actions/cache@v2
         with:
-          path: .venv/
+          path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pipenv-
 
-      - name: Install dependencies (if no cache hit)
+      - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install --dev
