test: Use ansible-lint (#70)
* ci: Add ansible-lint to CI workflow
* ci: Use separate release workflow
* ci: Add pipenv cache

--- a/roles/onboard/handlers/main.yml
+++ b/roles/onboard/handlers/main.yml
@@ -1,2 +1,10 @@
 ---
-# handlers file for onboard
+- name: Commit configuration
+  panos_commit:
+
+- name: Wait for reboot
+  wait_for:
+    timeout: 30
+
+- name: Wait until ready
+  panos_check:
